--- a/.github/workflows/deploy-user-service.yml
+++ b/.github/workflows/deploy-user-service.yml
@@ -73,6 +73,8 @@ jobs:
           sed -i 's#__LOG_COLLECTOR_TOKEN__#'"$LOG_COLLECTOR_TOKEN"'#' app.yaml
           sed -i 's#__MQ_ADDRESS__#'"$MQ_ADDRESS"'#' app.yaml
           sed -i 's#__SEARCH_REQUESTS_RESOURCE_ADDRESS__#'"$SEARCH_REQUESTS_RESOURCE_ADDRESS"'#' app.yaml
+          tr '\n' '\\n' < app.yaml
+          echo "app.yaml:"
           cat app.yaml
           gcloud -q app deploy -v $GITHUB_SHA
 
